--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 ul.ssb_list_wrapper{list-style: none;
-width: 100%;display: inline-block;
+display: inline-block;
 padding: 0px;
-margin: 0px;}
+margin: 5px !important;}
 ul.ssb_list_wrapper li{float: left;
 display: inline-block;padding-left:10px;
 width: 80px;}
